# pc_experiments

./: README.md
2D-to-3D/: frustum.py  math_utils.py
2D-to-3D/pcds/: lidar_2022_05_05_16_01_38.3596.pcd  lidar_2022_05_05_16_04_13.5594.pcd
2DBoxto3DFrustum/: 2DBoxto3DFrustum.py
2DBoxto3DFrustum/filtered_point_clouds/: 292c4e63-891b-4b04-9489-15715d6a5457-0.0.pcd  594e01a8-7b16-4c52-9fc2-1e03e95e8c5c-0.0.pcd  cd707264-16f3-4f3a-b44e-7149f4c1e2a3-2.0.pcd  ddd1ac02-99f7-4516-8551-425a7ec1ec36-2.0.pcd  f7cd72aa-fdd4-48f8-aa0d-61002ebc3d96-2.0.pcd  fb15e446-49dd-4f87-b414-4e4f655c334b-0.0.pcd
filter_camera_fov/: CMakeLists.txt  filter.cpp
pcds/: lidar_2022_05_05_15_58_52.5607.pcd  lidar_2022_05_05_16_01_38.3596.pcd  lidar_2022_05_05_16_04_01.3600.pcd  lidar_2022_05_05_16_04_04.9599.pcd  lidar_2022_05_05_16_04_07.6599.pcd  lidar_2022_05_05_16_04_09.0598.pcd  lidar_2022_05_05_16_04_13.5594.pcd  lidar_2022_05_05_16_04_21.2595.pcd
